<resources>
    <string name="app_name">Hands On</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>


    <string name="menu_home">Início</string>
    <string name="menu_about">Sobre</string>
    <string name="menu_cad">Cadastrar Prontuário</string>
    <string name="menu_list">Listar Prontuários</string>
    <string name="menu_prontuario">Prontuário</string>

    <string name="act_title_home">Principal</string>
    <string name="title_cad">Cadastro</string>
    <string name="title_list">Prontuários</string>

    <string name="textVisit"><b>Visitou algum destes países?</b></string>
    <string name="textQuantityDays">Quantas Semanas atrás?</string>
    <string name="textNotFoundProntuario">Nenhum Prontuário encontrado</string>

    <string name="chkItalia">Itália</string>
    <string name="chkChina">China</string>
    <string name="chkIndonesia">Indonésia</string>
    <string name="chkPortugal">Portugal</string>
    <string name="chkEua">E.U.A</string>
</resources>
