<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.handson.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_cadProntuario"
        android:name="com.example.handson.ui.prontuario.CadFragment"
        android:label="@string/menu_cad"
        tools:layout="@layout/fragment_cad" />

    <fragment
        android:id="@+id/nav_listProntuario"
        android:name="com.example.handson.ui.prontuario.ListFragment"
        android:label="@string/menu_list"
        tools:layout="@layout/fragment_list" />

</navigation>